--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -17,7 +17,7 @@ h3,
 h4,
 h5,
 h6 {
-  @apply mb-5 leading-loose font-serif font-light text-zinc-200;
+  @apply mb-5 leading-loose font-serif font-light text-white;
 }
 
 h1 {
